--- a/app/src/main/res/layout/activity_edit_profile_photo.xml
+++ b/app/src/main/res/layout/activity_edit_profile_photo.xml
@@ -52,21 +52,13 @@
             android:padding="20dp"
             android:gravity="center_horizontal">
 
-            <!-- Profile Image Section -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:elevation="8dp"
-                app:cardCornerRadius="20dp"
-                android:layout_margin="10dp"
-                android:backgroundTint="#F8F8F8">
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:padding="20dp"
-                    android:gravity="center_vertical">
+                    android:layout_marginTop="-20dp"
+                    android:gravity="center">
 
                     <ImageView
                         android:id="@+id/ivProfileImage"
@@ -78,11 +70,9 @@
                         android:elevation="2dp" />
 
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:orientation="vertical"
-                        android:layout_marginStart="20dp"
                         android:gravity="center_vertical">
 
                         <TextView
@@ -90,11 +80,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Username"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:layout_marginTop="24dp"
                             android:textStyle="bold"
                             android:textSize="20sp"
                             android:fontFamily="@font/poppins"
-                            android:textColor="@color/black"
-                            android:layout_marginBottom="8dp" />
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/tvEmail"
@@ -108,8 +100,6 @@
                     </LinearLayout>
 
                 </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
 
             <!-- Instructions -->
             <androidx.cardview.widget.CardView
